# research-ip-system

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.verify.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.build.json
backend/native/search-engine/: Cargo.toml
backend/native/search-engine/src/: lib.rs
backend/scripts/: build-rust-search.js  replay-audit.js  screenshot-mobile.py  stress-search.js  test-rust-search.js
backend/src/: app.module.ts  main.ts
backend/src/approvals/: approvals.controller.spec.ts  approvals.controller.ts  approvals.module.ts  approvals.service.spec.ts  approvals.service.ts
backend/src/attachments/: attachments.controller.spec.ts  attachments.controller.ts  attachments.module.ts  attachments.service.spec.ts  attachments.service.ts
backend/src/auth/: auth.controller.ts  (+6 more)
backend/test/: auth.e2e-spec.ts  bugfixes.e2e-spec.ts  helpers.ts  jest-e2e-cov.json  new-modules.e2e-spec.ts  resources.e2e-spec.ts  security.e2e-spec.ts  spec-compliance.e2e-spec.ts
database/: schema.sql  seed.sql
database/migrations/: 001_dictionary.sql  002_dictionary_seed.sql  003_upgrade_existing_tables.sql  004_audit_log_field_level.sql
docs/: API_ENDPOINTS.md  API_PROTOCOL.md  CHANGELOG-2026-06-12.md  DATABASE_SCHEMA.md  DISASTER_RECOVERY.md  REDIS-TEST-REPORT-2026-06-12.md  TEST_ACCOUNTS.md
docs/design/: login-philosophy.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
(+277 files in other folders)
