[package]
name = "research_search_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jieba-rs = "0.7"

[build-dependencies]
napi-build = "2"
